--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <div>commit 1</div>
-    <div>commit 2</div>
+    <div>commit 2
+        <div>
+            <h1>Hola soy Daniel Ramirez </h1>
+        </div>
+    </div>
 </body>
 </html>
