actualizacion de perfil de mi rama

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div>commit 2
         <div>
             <h1>Hola soy Daniel Ramirez </h1>
+            <p>Soy un desarrollador de software</p>
         </div>
     </div>
 </body>
