nueva actualizacion para el proyecto rama tecnolgias

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div>
             <h1>Hola soy Daniel Ramirez </h1>
             <p>Soy un desarrollador de software</p>
+            <p>las tecnologias que manejo son django rest</p>
         </div>
     </div>
 </body>
