--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title>Document</title>
 </head>
 <body>
     <div>commit 1</div>
-    <div>commit 2
-        <div>
-            <h1>Hola soy Daniel Ramirez </h1>
-            <p>Soy un desarrollador de software</p>
-            <p>las tecnologias que manejo son django rest</p>
+
+    <div id="container">
+        <div id="cabecera">
+            Commit 2
+        </div>
+        <div id="post">
+            <h1>            Soy Daniel Ramirez Desarrollador de Software
+            </h1>
+            <p>Este apartado donde esto mejorado el proyecto con las ramas</p>
+        </div>
         </div>
     </div>
 </body>
